remove unused method