@@ -6,7 +6,6 @@
 package special.model.hierarchy;
 
 import java.util.*;
-import java.util.stream.*;
 import javax.annotation.*;
 import org.semanticweb.owlapi.model.*;
 import static org.semanticweb.owlapi.util.OWLAPIStreamUtils.*;
@@ -25,7 +24,7 @@ public class ClassInOntology extends RawOntology<OWLClass> {
     public Set<OWLClass> getParentsInRawHierarchy(@Nonnull OWLClass child) {
         Set<OWLClass> result = new HashSet<>();
         for (OWLOntology ont : asList(getRootOntology().importsClosure())) {
-            for (OWLSubClassOfAxiom subClassOf : ont.subClassAxiomsForSubClass(child).collect(Collectors.toList())) {
+            for (OWLSubClassOfAxiom subClassOf : ont.subClassAxiomsForSubClass(child).toList()) {
                 if (!subClassOf.getSuperClass().isAnonymous()) {
                     OWLClass superClass = (OWLClass) subClassOf.getSuperClass();
                     result.add(superClass);
@@ -39,7 +38,7 @@ public class ClassInOntology extends RawOntology<OWLClass> {
     public Set<OWLClass> getChildrenInRawHierarchy(@Nonnull OWLClass parent) {
         Set<OWLClass> result = new HashSet<>();
         for (OWLOntology ont : asList(getRootOntology().importsClosure())) {
-            for (OWLSubClassOfAxiom subClassOf : ont.subClassAxiomsForSuperClass(parent).collect(Collectors.toList())) {
+            for (OWLSubClassOfAxiom subClassOf : ont.subClassAxiomsForSuperClass(parent).toList()) {
                 if (!subClassOf.getSubClass().isAnonymous()) {
                     OWLClass subClass = (OWLClass) subClassOf.getSubClass();
                     result.add(subClass);
@@ -53,8 +52,8 @@ public class ClassInOntology extends RawOntology<OWLClass> {
     public Set<OWLClass> getDisjointsInRawHierarchy(@Nonnull OWLClass el) {
         Set<OWLClass> result = new HashSet<>();
         for (OWLOntology ont : asList(getRootOntology().importsClosure())) {
-            for (OWLDisjointClassesAxiom disjointClassesAxiom : ont.disjointClassesAxioms(el).collect(Collectors.toList())) {
-                for (OWLClass disjoint : disjointClassesAxiom.classesInSignature().collect(Collectors.toList())) {
+            for (OWLDisjointClassesAxiom disjointClassesAxiom : ont.disjointClassesAxioms(el).toList()) {
+                for (OWLClass disjoint : disjointClassesAxiom.classesInSignature().toList()) {
                     if (!disjoint.equals(el)) {
                         result.add(disjoint);
                     }
